--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# MySQL
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.hibernate.ddl-auto=none
+ spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente?useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+# exibe os comandos SQL
 
